# blizzlikecore

./: .gitignore  .travis.yml  CMakeLists.txt  CREDITS.md  README.md  config.h.cmake  windows_build.bat
dep/ACE_wrappers/: CMakeLists.txt
dep/ACE_wrappers/ace/: Configuration_Import_Export.cpp  OS_NS_string.inl  config-macros.h  config.h
dep/libmpq/: CMakeLists.txt  COPYING
dep/libmpq/bindings/d/: mpq.d
dep/libmpq/bindings/python/: mpq.py
dep/libmpq/debian/: copyright
dep/libmpq/libmpq/: common.c  common.h  explode.c  explode.h  extract.c  extract.h  huffman.c  huffman.h  mpq-internal.h  mpq.c  mpq.h  pack_begin.h  pack_end.h  platform.h  wave.c  wave.h
dep/libmpq/tools/: crypt_buf_gen.c
src/scripts/: CMakeLists.txt  ScriptMgr.cpp  ScriptMgr.h  config.h  scripts.conf.dist.in  sd2_revision_sql.h
src/scripts/base/: escort_ai.cpp  escort_ai.h  follower_ai.cpp  follower_ai.h  guard_ai.cpp  guard_ai.h  pet_ai.cpp  pet_ai.h
src/scripts/include/: precompiled.cpp  precompiled.h  sc_creature.cpp  sc_creature.h  sc_gossip.h  sc_grid_searchers.cpp  sc_grid_searchers.h  sc_instance.cpp  sc_instance.h
src/scripts/scripts/battlegrounds/: battleground.cpp
src/scripts/scripts/eastern_kingdoms/: alterac_mountains.cpp  arathi_highlands.cpp  blasted_lands.cpp  burning_steppes.cpp  dun_morogh.cpp  eastern_plaguelands.cpp  elwynn_forest.cpp  eversong_woods.cpp  ghostlands.cpp  hinterlands.cpp  ironforge.cpp  isle_of_queldanas.cpp  loch_modan.cpp  redridge_mountains.cpp  searing_gorge.cpp  silvermoon_city.cpp  silverpine_forest.cpp  stormwind_city.cpp  stranglethorn_vale.cpp  swamp_of_sorrows.cpp  tirisfal_glades.cpp  undercity.cpp  western_plaguelands.cpp  westfall.cpp  wetlands.cpp
src/scripts/scripts/eastern_kingdoms/blackrock_depths/: blackrock_depths.cpp  blackrock_depths.h  boss_ambassador_flamelash.cpp  boss_coren_direbrew.cpp  boss_emperor_dagran_thaurissan.cpp  boss_general_angerforge.cpp  boss_high_interrogator_gerstahn.cpp  instance_blackrock_depths.cpp
src/scripts/scripts/eastern_kingdoms/blackrock_spire/: blackrock_spire.h  boss_gyth.cpp  boss_overlord_wyrmthalak.cpp  boss_pyroguard_emberseer.cpp  instance_blackrock_spire.cpp
src/scripts/scripts/eastern_kingdoms/blackwing_lair/: blackwing_lair.h  boss_broodlord_lashlayer.cpp  boss_chromaggus.cpp  boss_ebonroc.cpp  boss_firemaw.cpp  boss_flamegor.cpp  boss_nefarian.cpp  boss_razorgore.cpp  boss_vaelastrasz.cpp  boss_victor_nefarius.cpp  instance_blackwing_lair.cpp
src/scripts/scripts/eastern_kingdoms/deadmines/: boss_mr_smite.cpp  deadmines.cpp  deadmines.h  instance_deadmines.cpp
src/scripts/scripts/eastern_kingdoms/gnomeregan/: boss_thermaplugg.cpp  gnomeregan.cpp  gnomeregan.h  instance_gnomeregan.cpp
src/scripts/scripts/eastern_kingdoms/karazhan/: boss_curator.cpp  boss_maiden_of_virtue.cpp  boss_midnight.cpp  boss_moroes.cpp  boss_netherspite.cpp  boss_nightbane.cpp  boss_prince_malchezaar.cpp  boss_shade_of_aran.cpp  boss_terestian_illhoof.cpp  bosses_opera.cpp  chess_event.cpp  instance_karazhan.cpp  karazhan.cpp  karazhan.h
src/scripts/scripts/eastern_kingdoms/magisters_terrace/: boss_felblood_kaelthas.cpp  boss_priestess_delrissa.cpp  boss_selin_fireheart.cpp  boss_vexallus.cpp  instance_magisters_terrace.cpp  magisters_terrace.cpp  magisters_terrace.h
src/scripts/scripts/eastern_kingdoms/molten_core/: boss_baron_geddon.cpp  boss_garr.cpp  boss_gehennas.cpp  boss_golemagg.cpp  boss_lucifron.cpp  boss_magmadar.cpp  boss_majordomo_executus.cpp  boss_ragnaros.cpp  boss_shazzrah.cpp  boss_sulfuron_harbinger.cpp  instance_molten_core.cpp  molten_core.cpp  molten_core.h
src/scripts/scripts/eastern_kingdoms/naxxramas/: boss_anubrekhan.cpp  boss_faerlina.cpp  boss_four_horsemen.cpp  boss_gluth.cpp  boss_gothik.cpp  boss_grobbulus.cpp  boss_heigan.cpp  boss_kelthuzad.cpp  boss_loatheb.cpp  boss_maexxna.cpp  boss_noth.cpp  boss_patchwerk.cpp  boss_razuvious.cpp  boss_sapphiron.cpp  boss_thaddius.cpp  instance_naxxramas.cpp  naxxramas.h
src/scripts/scripts/eastern_kingdoms/scarlet_monastery/: boss_arcanist_doan.cpp  boss_headless_horseman.cpp  boss_herod.cpp  boss_mograine_and_whitemane.cpp  instance_scarlet_monastery.cpp  scarlet_monastery.h
src/scripts/scripts/eastern_kingdoms/scholomance/: boss_darkmaster_gandling.cpp  boss_jandice_barov.cpp  instance_scholomance.cpp  scholomance.h
src/scripts/scripts/examples/: example_creature.cpp  example_escort.cpp  example_gossip_codebox.cpp  example_misc.cpp
src/scripts/scripts/kalimdor/: ashenvale.cpp  azshara.cpp  azuremyst_isle.cpp  bloodmyst_isle.cpp  boss_azuregos.cpp  darkshore.cpp  desolace.cpp  durotar.cpp  dustwallow_marsh.cpp  felwood.cpp  feralas.cpp  moonglade.cpp  mulgore.cpp  orgrimmar.cpp  silithus.cpp  stonetalon_mountains.cpp  tanaris.cpp  teldrassil.cpp  the_barrens.cpp  thousand_needles.cpp  thunder_bluff.cpp  ungoro_crater.cpp  winterspring.cpp
src/scripts/scripts/outland/: blades_edge_mountains.cpp  boss_doomlord_kazzak.cpp  boss_doomwalker.cpp  hellfire_peninsula.cpp  nagrand.cpp  netherstorm.cpp  shadowmoon_valley.cpp  shattrath_city.cpp  terokkar_forest.cpp  zangarmarsh.cpp
src/scripts/scripts/world/: areatrigger_scripts.cpp  bosses_emerald_dragons.cpp  go_scripts.cpp  guards.cpp  item_scripts.cpp  mob_generic_creature.cpp  npc_professions.cpp  npcs_special.cpp  spell_scripts.cpp  world_map_scripts.cpp  world_map_scripts.h
src/scripts/system/: BlizzLikeRev.cpp  ScriptLoader.cpp  ScriptLoader.h  system.cpp  system.h
src/tools/map_extractor/: CMakeLists.txt
src/tools/map_extractor/libmpq/: CMakeLists.txt  common.cpp  common.h  explode.cpp  explode.h  extract.cpp  huffman.cpp  huffman.h  mpq.cpp  mpq.h  parser.cpp  wave.cpp  wave.h
src/tools/map_extractor/loadlib/: CMakeLists.txt
src/tools/mmap_generator/: CMakeLists.txt  mmap_extract.py
src/tools/mmap_generator/src/: BlizzLikeMap.h  IntermediateValues.cpp  IntermediateValues.h  MMapCommon.h  MapBuilder.cpp  MapBuilder.h  TerrainBuilder.cpp  TerrainBuilder.h  VMapExtensions.cpp  generator.cpp
src/tools/vmap_assembler/: CMakeLists.txt  vmap_assembler.cpp
(+688 files in other folders)
