#
# This file is part of the BlizzLikeCore Project. See CREDITS and LICENSE files
#
# This program is free software; you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation; either version 3 of the License, or
# (at your option) any later version.
#
# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with this program; if not, write to the Free Software
# Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
#

set(LIBRARY_NAME ACE)

set(LIBRARY_SRCS
  ./ace/ACE.cpp
  ./ace/ACE_crc32.cpp
  ./ace/ACE_crc_ccitt.cpp
  ./ace/ace_wchar.cpp
  ./ace/Activation_Queue.cpp
  ./ace/Active_Map_Manager.cpp
  ./ace/Addr.cpp
  ./ace/Argv_Type_Converter.cpp
  ./ace/Assert.cpp
  ./ace/Asynch_IO.cpp
  ./ace/Asynch_IO_Impl.cpp
  ./ace/Asynch_Pseudo_Task.cpp
  ./ace/ATM_Acceptor.cpp
  ./ace/ATM_Addr.cpp
  ./ace/ATM_Connector.cpp
  ./ace/ATM_Params.cpp
  ./ace/ATM_QoS.cpp
  ./ace/ATM_Stream.cpp
  ./ace/Atomic_Op.cpp
  ./ace/Atomic_Op_Sparc.c
  ./ace/Auto_Event.cpp
  ./ace/Barrier.cpp
  ./ace/Base_Thread_Adapter.cpp
  ./ace/Based_Pointer_Repository.cpp
  ./ace/Basic_Stats.cpp
  ./ace/Basic_Types.cpp
  ./ace/Capabilities.cpp
  ./ace/CDR_Base.cpp
  ./ace/CDR_Size.cpp
  ./ace/CDR_Stream.cpp
  ./ace/Cleanup.cpp
  ./ace/Codecs.cpp
  ./ace/Codeset_IBM1047.cpp
  ./ace/Codeset_Registry.cpp
  ./ace/Codeset_Registry_db.cpp
  ./ace/Condition_Recursive_Thread_Mutex.cpp
  ./ace/Condition_Thread_Mutex.cpp
  ./ace/Configuration.cpp
  ./ace/Configuration_Import_Export.cpp
  ./ace/Connection_Recycling_Strategy.cpp
  ./ace/Containers.cpp
  ./ace/Copy_Disabled.cpp
  ./ace/Countdown_Time.cpp
  ./ace/Date_Time.cpp
  ./ace/DEV.cpp
  ./ace/DEV_Addr.cpp
  ./ace/DEV_Connector.cpp
  ./ace/DEV_IO.cpp
  ./ace/Dev_Poll_Reactor.cpp
  ./ace/Dirent.cpp
  ./ace/Dirent_Selector.cpp
  ./ace/DLL.cpp
  ./ace/DLL_Manager.cpp
  ./ace/Dump.cpp
  ./ace/Dynamic.cpp
  ./ace/Dynamic_Message_Strategy.cpp
  ./ace/Dynamic_Service_Base.cpp
  ./ace/Dynamic_Service_Dependency.cpp
  ./ace/Encoding_Converter.cpp
  ./ace/Encoding_Converter_Factory.cpp
  ./ace/Event.cpp
  ./ace/Event_Handler.cpp
  ./ace/FIFO.cpp
  ./ace/FIFO_Recv.cpp
  ./ace/FIFO_Recv_Msg.cpp
  ./ace/FIFO_Send.cpp
  ./ace/FIFO_Send_Msg.cpp
  ./ace/FILE.cpp
  ./ace/FILE_Addr.cpp
  ./ace/FILE_Connector.cpp
  ./ace/FILE_IO.cpp
  ./ace/File_Lock.cpp
  ./ace/Filecache.cpp
  ./ace/Flag_Manip.cpp
  ./ace/Framework_Component.cpp
  ./ace/Functor.cpp
  ./ace/Functor_String.cpp
  ./ace/Get_Opt.cpp
  ./ace/gethrtime.cpp
  ./ace/Handle_Ops.cpp
  ./ace/Handle_Set.cpp
  ./ace/Hashable.cpp
  ./ace/High_Res_Timer.cpp
  ./ace/ICMP_Socket.cpp
  ./ace/INET_Addr.cpp
  ./ace/Init_ACE.cpp
  ./ace/IO_Cntl_Msg.cpp
  ./ace/IO_SAP.cpp
  ./ace/IOStream.cpp
  ./ace/IPC_SAP.cpp
  ./ace/Lib_Find.cpp
  ./ace/Local_Memory_Pool.cpp
  ./ace/Local_Name_Space.cpp
  ./ace/Local_Tokens.cpp
  ./ace/Lock.cpp
  ./ace/Log_Msg.cpp
  ./ace/Log_Msg_Backend.cpp
  ./ace/Log_Msg_Callback.cpp
  ./ace/Log_Msg_IPC.cpp
  ./ace/Log_Msg_NT_Event_Log.cpp
  ./ace/Log_Msg_UNIX_Syslog.cpp
  ./ace/Log_Record.cpp
  ./ace/Logging_Strategy.cpp
  ./ace/LSOCK.cpp
  ./ace/LSOCK_Acceptor.cpp
  ./ace/LSOCK_CODgram.cpp
  ./ace/LSOCK_Connector.cpp
  ./ace/LSOCK_Dgram.cpp
  ./ace/LSOCK_Stream.cpp
  ./ace/Malloc.cpp
  ./ace/Malloc_Allocator.cpp
  ./ace/Manual_Event.cpp
  ./ace/MEM_Acceptor.cpp
  ./ace/MEM_Addr.cpp
  ./ace/MEM_Connector.cpp
  ./ace/MEM_IO.cpp
  ./ace/Mem_Map.cpp
  ./ace/MEM_SAP.cpp
  ./ace/MEM_Stream.cpp
  ./ace/Message_Block.cpp
  ./ace/Message_Queue.cpp
  ./ace/Message_Queue_NT.cpp
  ./ace/Message_Queue_Vx.cpp
  ./ace/Method_Request.cpp
  ./ace/MMAP_Memory_Pool.cpp
  ./ace/Monitor_Admin.cpp
  ./ace/Monitor_Admin_Manager.cpp
  ./ace/Monitor_Base.cpp
  ./ace/Monitor_Control_Action.cpp
  ./ace/Monitor_Control_Types.cpp
  ./ace/Monitor_Point_Registry.cpp
  ./ace/Monitor_Size.cpp
  ./ace/Msg_WFMO_Reactor.cpp
  ./ace/Multihomed_INET_Addr.cpp
  ./ace/Mutex.cpp
  ./ace/Name_Proxy.cpp
  ./ace/Name_Request_Reply.cpp
  ./ace/Name_Space.cpp
  ./ace/Naming_Context.cpp
  ./ace/Netlink_Addr.cpp
  ./ace/Notification_Queue.cpp
  ./ace/Notification_Strategy.cpp
  ./ace/NT_Service.cpp
  ./ace/Obchunk.cpp
  ./ace/Object_Manager.cpp
  ./ace/Object_Manager_Base.cpp
  ./ace/OS_Errno.cpp
  ./ace/OS_Log_Msg_Attributes.cpp
  ./ace/OS_main.cpp
  ./ace/OS_NS_arpa_inet.cpp
  ./ace/OS_NS_ctype.cpp
  ./ace/OS_NS_dirent.cpp
  ./ace/OS_NS_dlfcn.cpp
  ./ace/OS_NS_errno.cpp
  ./ace/OS_NS_fcntl.cpp
  ./ace/OS_NS_math.cpp
  ./ace/OS_NS_netdb.cpp
  ./ace/OS_NS_poll.cpp
  ./ace/OS_NS_pwd.cpp
  ./ace/OS_NS_regex.cpp
  ./ace/OS_NS_signal.cpp
  ./ace/OS_NS_stdio.cpp
  ./ace/OS_NS_stdlib.cpp
  ./ace/OS_NS_string.cpp
  ./ace/OS_NS_strings.cpp
  ./ace/OS_NS_stropts.cpp
  ./ace/OS_NS_sys_mman.cpp
  ./ace/OS_NS_sys_msg.cpp
  ./ace/OS_NS_sys_resource.cpp
  ./ace/OS_NS_sys_select.cpp
  ./ace/OS_NS_sys_sendfile.cpp
  ./ace/OS_NS_sys_shm.cpp
  ./ace/OS_NS_sys_socket.cpp
  ./ace/OS_NS_sys_stat.cpp
  ./ace/OS_NS_sys_time.cpp
  ./ace/OS_NS_sys_uio.cpp
  ./ace/OS_NS_sys_utsname.cpp
  ./ace/OS_NS_sys_wait.cpp
  ./ace/OS_NS_Thread.cpp
  ./ace/OS_NS_time.cpp
  ./ace/OS_NS_unistd.cpp
  ./ace/OS_NS_wchar.cpp
  ./ace/OS_QoS.cpp
  ./ace/OS_Thread_Adapter.cpp
  ./ace/OS_TLI.cpp
  ./ace/Pagefile_Memory_Pool.cpp
  ./ace/Parse_Node.cpp
  ./ace/PI_Malloc.cpp
  ./ace/Ping_Socket.cpp
  ./ace/Pipe.cpp
  ./ace/POSIX_Asynch_IO.cpp
  ./ace/POSIX_CB_Proactor.cpp
  ./ace/POSIX_Proactor.cpp
  ./ace/Priority_Reactor.cpp
  ./ace/Proactor.cpp
  ./ace/Proactor_Impl.cpp
  ./ace/Process.cpp
  ./ace/Process_Manager.cpp
  ./ace/Process_Mutex.cpp
  ./ace/Process_Semaphore.cpp
  ./ace/Profile_Timer.cpp
  ./ace/Reactor.cpp
  ./ace/Reactor_Impl.cpp
  ./ace/Reactor_Notification_Strategy.cpp
  ./ace/Reactor_Timer_Interface.cpp
  ./ace/Read_Buffer.cpp
  ./ace/Recursive_Thread_Mutex.cpp
  ./ace/Recyclable.cpp
  ./ace/Registry.cpp
  ./ace/Registry_Name_Space.cpp
  ./ace/Remote_Name_Space.cpp
  ./ace/Remote_Tokens.cpp
  ./ace/Rtems_init.c
  ./ace/RW_Mutex.cpp
  ./ace/RW_Process_Mutex.cpp
  ./ace/RW_Thread_Mutex.cpp
  ./ace/Sample_History.cpp
  ./ace/Sbrk_Memory_Pool.cpp
  ./ace/Sched_Params.cpp
  ./ace/Select_Reactor_Base.cpp
  ./ace/Semaphore.cpp
  ./ace/Service_Config.cpp
  ./ace/Service_Gestalt.cpp
  ./ace/Service_Manager.cpp
  ./ace/Service_Object.cpp
  ./ace/Service_Repository.cpp
  ./ace/Service_Types.cpp
  ./ace/Shared_Memory.cpp
  ./ace/Shared_Memory_MM.cpp
  ./ace/Shared_Memory_Pool.cpp
  ./ace/Shared_Memory_SV.cpp
  ./ace/Shared_Object.cpp
  ./ace/Sig_Adapter.cpp
  ./ace/Sig_Handler.cpp
  ./ace/Signal.cpp
  ./ace/SOCK.cpp
  ./ace/SOCK_Acceptor.cpp
  ./ace/SOCK_CODgram.cpp
  ./ace/Sock_Connect.cpp
  ./ace/SOCK_Connector.cpp
  ./ace/SOCK_Dgram.cpp
  ./ace/SOCK_Dgram_Bcast.cpp
  ./ace/SOCK_Dgram_Mcast.cpp
  ./ace/SOCK_IO.cpp
  ./ace/SOCK_Netlink.cpp
  ./ace/SOCK_SEQPACK_Acceptor.cpp
  ./ace/SOCK_SEQPACK_Association.cpp
  ./ace/SOCK_SEQPACK_Connector.cpp
  ./ace/SOCK_Stream.cpp
  ./ace/SPIPE.cpp
  ./ace/SPIPE_Acceptor.cpp
  ./ace/SPIPE_Addr.cpp
  ./ace/SPIPE_Connector.cpp
  ./ace/SPIPE_Stream.cpp
  ./ace/SString.cpp
  ./ace/Stack_Trace.cpp
  ./ace/Stats.cpp
  ./ace/String_Base_Const.cpp
  ./ace/SUN_Proactor.cpp
  ./ace/SV_Message.cpp
  ./ace/SV_Message_Queue.cpp
  ./ace/SV_Semaphore_Complex.cpp
  ./ace/SV_Semaphore_Simple.cpp
  ./ace/SV_Shared_Memory.cpp
  ./ace/Svc_Conf_Lexer.cpp
  ./ace/Svc_Conf_y.cpp
  ./ace/Synch_Options.cpp
  ./ace/System_Time.cpp
  ./ace/Task.cpp
  ./ace/Thread.cpp
  ./ace/Thread_Adapter.cpp
  ./ace/Thread_Control.cpp
  ./ace/Thread_Exit.cpp
  ./ace/Thread_Hook.cpp
  ./ace/Thread_Manager.cpp
  ./ace/Thread_Mutex.cpp
  ./ace/Thread_Semaphore.cpp
  ./ace/Throughput_Stats.cpp
  ./ace/Time_Value.cpp
  ./ace/Timeprobe.cpp
  ./ace/TLI.cpp
  ./ace/TLI_Acceptor.cpp
  ./ace/TLI_Connector.cpp
  ./ace/TLI_Stream.cpp
  ./ace/Token.cpp
  ./ace/Token_Collection.cpp
  ./ace/Token_Invariants.cpp
  ./ace/Token_Manager.cpp
  ./ace/Token_Request_Reply.cpp
  ./ace/TP_Reactor.cpp
  ./ace/Trace.cpp
  ./ace/TSS_Adapter.cpp
  ./ace/TTY_IO.cpp
  ./ace/UNIX_Addr.cpp
  ./ace/UPIPE_Acceptor.cpp
  ./ace/UPIPE_Connector.cpp
  ./ace/UPIPE_Stream.cpp
  ./ace/UTF16_Encoding_Converter.cpp
  ./ace/UTF32_Encoding_Converter.cpp
  ./ace/UTF8_Encoding_Converter.cpp
  ./ace/UUID.cpp
  ./ace/WFMO_Reactor.cpp
  ./ace/WIN32_Asynch_IO.cpp
  ./ace/WIN32_Proactor.cpp
  ./ace/XML_Svc_Conf.cpp
  ./ace/XTI_ATM_Mcast.cpp
  ./ace/ACE.inl
  ./ace/ace_wchar.inl
  ./ace/Activation_Queue.inl
  ./ace/Active_Map_Manager.inl
  ./ace/Active_Map_Manager_T.inl
  ./ace/Addr.inl
  ./ace/ARGV.inl
  ./ace/Argv_Type_Converter.inl
  ./ace/Array_Base.inl
  ./ace/Array_Map.inl
  ./ace/Asynch_IO_Impl.inl
  ./ace/ATM_Acceptor.inl
  ./ace/ATM_Addr.inl
  ./ace/ATM_Connector.inl
  ./ace/ATM_Params.inl
  ./ace/ATM_QoS.inl
  ./ace/ATM_Stream.inl
  ./ace/Atomic_Op.inl
  ./ace/Atomic_Op_T.inl
  ./ace/Auto_Event.inl
  ./ace/Auto_Functor.inl
  ./ace/Auto_IncDec_T.inl
  ./ace/Auto_Ptr.inl
  ./ace/Barrier.inl
  ./ace/Base_Thread_Adapter.inl
  ./ace/Based_Pointer_T.inl
  ./ace/Basic_Stats.inl
  ./ace/Basic_Types.inl
  ./ace/Bound_Ptr.inl
  ./ace/Cache_Map_Manager_T.inl
  ./ace/Caching_Strategies_T.inl
  ./ace/Capabilities.inl
  ./ace/CDR_Base.inl
  ./ace/CDR_Size.inl
  ./ace/CDR_Stream.inl
  ./ace/Cleanup.inl
  ./ace/Codeset_Registry.inl
  ./ace/Condition_T.inl
  ./ace/Condition_Thread_Mutex.inl
  ./ace/Configuration.inl
  ./ace/Containers.inl
  ./ace/Containers_T.inl
  ./ace/Date_Time.inl
  ./ace/DEV.inl
  ./ace/DEV_Addr.inl
  ./ace/DEV_Connector.inl
  ./ace/DEV_IO.inl
  ./ace/Dev_Poll_Reactor.inl
  ./ace/Dirent.inl
  ./ace/Dirent_Selector.inl
  ./ace/Dynamic.inl
  ./ace/Dynamic_Message_Strategy.inl
  ./ace/Dynamic_Service.inl
  ./ace/Env_Value_T.inl
  ./ace/Event.inl
  ./ace/Event_Handler.inl
  ./ace/Event_Handler_T.inl
  ./ace/FIFO.inl
  ./ace/FIFO_Recv.inl
  ./ace/FIFO_Recv_Msg.inl
  ./ace/FIFO_Send.inl
  ./ace/FIFO_Send_Msg.inl
  ./ace/FILE.inl
  ./ace/FILE_Addr.inl
  ./ace/FILE_Connector.inl
  ./ace/FILE_IO.inl
  ./ace/File_Lock.inl
  ./ace/Flag_Manip.inl
  ./ace/Framework_Component.inl
  ./ace/Functor.inl
  ./ace/Functor_String.inl
  ./ace/Functor_T.inl
  ./ace/Get_Opt.inl
  ./ace/Guard_T.inl
  ./ace/Handle_Gobbler.inl
  ./ace/Handle_Set.inl
  ./ace/Hash_Cache_Map_Manager_T.inl
  ./ace/Hash_Map_Manager_T.inl
  ./ace/Hash_Map_With_Allocator_T.inl
  ./ace/Hash_Multi_Map_Manager_T.inl
  ./ace/Hashable.inl
  ./ace/High_Res_Timer.inl
  ./ace/INET_Addr.inl
  ./ace/Intrusive_Auto_Ptr.inl
  ./ace/Intrusive_List.inl
  ./ace/Intrusive_List_Node.inl
  ./ace/IO_Cntl_Msg.inl
  ./ace/IO_SAP.inl
  ./ace/IOStream_T.inl
  ./ace/IPC_SAP.inl
  ./ace/Local_Tokens.inl
  ./ace/Lock.inl
  ./ace/Lock_Adapter_T.inl
  ./ace/Log_Msg.inl
  ./ace/Log_Record.inl
  ./ace/LSOCK.inl
  ./ace/LSOCK_CODgram.inl
  ./ace/LSOCK_Connector.inl
  ./ace/LSOCK_Dgram.inl
  ./ace/LSOCK_Stream.inl
  ./ace/Malloc.inl
  ./ace/Malloc_Allocator.inl
  ./ace/Malloc_T.inl
  ./ace/Managed_Object.inl
  ./ace/Manual_Event.inl
  ./ace/Map_Manager.inl
  ./ace/Map_T.inl
  ./ace/MEM_Acceptor.inl
  ./ace/MEM_Addr.inl
  ./ace/MEM_Connector.inl
  ./ace/MEM_IO.inl
  ./ace/Mem_Map.inl
  ./ace/MEM_SAP.inl
  ./ace/MEM_Stream.inl
  ./ace/Message_Block.inl
  ./ace/Message_Block_T.inl
  ./ace/Message_Queue.inl
  ./ace/Message_Queue_NT.inl
  ./ace/Message_Queue_Vx.inl
  ./ace/Metrics_Cache_T.inl
  ./ace/MMAP_Memory_Pool.inl
  ./ace/Module.inl
  ./ace/Monitor_Base.inl
  ./ace/Msg_WFMO_Reactor.inl
  ./ace/Multihomed_INET_Addr.inl
  ./ace/Mutex.inl
  ./ace/Naming_Context.inl
  ./ace/Netlink_Addr.inl
  ./ace/Notification_Queue.inl
  ./ace/Notification_Strategy.inl
  ./ace/NT_Service.inl
  ./ace/Obchunk.inl
  ./ace/Object_Manager.inl
  ./ace/Obstack_T.inl
  ./ace/OS_Errno.inl
  ./ace/OS_Log_Msg_Attributes.inl
  ./ace/OS_NS_arpa_inet.inl
  ./ace/OS_NS_ctype.inl
  ./ace/OS_NS_dirent.inl
  ./ace/OS_NS_dlfcn.inl
  ./ace/OS_NS_errno.inl
  ./ace/OS_NS_fcntl.inl
  ./ace/OS_NS_math.inl
  ./ace/OS_NS_netdb.inl
  ./ace/OS_NS_poll.inl
  ./ace/OS_NS_pwd.inl
  ./ace/OS_NS_regex.inl
  ./ace/OS_NS_signal.inl
  ./ace/OS_NS_stdio.inl
  ./ace/OS_NS_stdlib.inl
  ./ace/OS_NS_string.inl
  ./ace/OS_NS_strings.inl
  ./ace/OS_NS_stropts.inl
  ./ace/OS_NS_sys_mman.inl
  ./ace/OS_NS_sys_msg.inl
  ./ace/OS_NS_sys_resource.inl
  ./ace/OS_NS_sys_select.inl
  ./ace/OS_NS_sys_sendfile.inl
  ./ace/OS_NS_sys_shm.inl
  ./ace/OS_NS_sys_socket.inl
  ./ace/OS_NS_sys_stat.inl
  ./ace/OS_NS_sys_time.inl
  ./ace/OS_NS_sys_uio.inl
  ./ace/OS_NS_sys_wait.inl
  ./ace/OS_NS_Thread.inl
  ./ace/OS_NS_time.inl
  ./ace/OS_NS_unistd.inl
  ./ace/OS_NS_wchar.inl
  ./ace/OS_NS_wctype.inl
  ./ace/OS_TLI.inl
  ./ace/Pagefile_Memory_Pool.inl
  ./ace/Pair_T.inl
  ./ace/PI_Malloc.inl
  ./ace/Ping_Socket.inl
  ./ace/Pipe.inl
  ./ace/POSIX_Proactor.inl
  ./ace/Proactor.inl
  ./ace/Process.inl
  ./ace/Process_Manager.inl
  ./ace/Process_Mutex.inl
  ./ace/Process_Semaphore.inl
  ./ace/Profile_Timer.inl
  ./ace/RB_Tree.inl
  ./ace/Reactor.inl
  ./ace/Reactor_Notification_Strategy.inl
  ./ace/Read_Buffer.inl
  ./ace/Recursive_Thread_Mutex.inl
  ./ace/Recyclable.inl
  ./ace/Refcountable_T.inl
  ./ace/Refcounted_Auto_Ptr.inl
  ./ace/Remote_Tokens.inl
  ./ace/Reverse_Lock_T.inl
  ./ace/RW_Mutex.inl
  ./ace/RW_Process_Mutex.inl
  ./ace/RW_Thread_Mutex.inl
  ./ace/Sample_History.inl
  ./ace/Sched_Params.inl
  ./ace/Select_Reactor_Base.inl
  ./ace/Select_Reactor_T.inl
  ./ace/Semaphore.inl
  ./ace/Service_Config.inl
  ./ace/Service_Gestalt.inl
  ./ace/Service_Object.inl
  ./ace/Service_Repository.inl
  ./ace/Service_Types.inl
  ./ace/Shared_Memory_MM.inl
  ./ace/Shared_Memory_SV.inl
  ./ace/Shared_Object.inl
  ./ace/Sig_Handler.inl
  ./ace/Signal.inl
  ./ace/Singleton.inl
  ./ace/SOCK.inl
  ./ace/SOCK_Acceptor.inl
  ./ace/SOCK_CODgram.inl
  ./ace/SOCK_Connector.inl
  ./ace/SOCK_Dgram.inl
  ./ace/SOCK_Dgram_Bcast.inl
  ./ace/SOCK_Dgram_Mcast.inl
  ./ace/SOCK_IO.inl
  ./ace/SOCK_Netlink.inl
  ./ace/SOCK_SEQPACK_Acceptor.inl
  ./ace/SOCK_SEQPACK_Association.inl
  ./ace/SOCK_SEQPACK_Connector.inl
  ./ace/SOCK_Stream.inl
  ./ace/SPIPE.inl
  ./ace/SPIPE_Addr.inl
  ./ace/SPIPE_Connector.inl
  ./ace/SPIPE_Stream.inl
  ./ace/SString.inl
  ./ace/Stats.inl
  ./ace/Strategies_T.inl
  ./ace/Stream.inl
  ./ace/String_Base.inl
  ./ace/SV_Message.inl
  ./ace/SV_Message_Queue.inl
  ./ace/SV_Semaphore_Complex.inl
  ./ace/SV_Semaphore_Simple.inl
  ./ace/SV_Shared_Memory.inl
  ./ace/Task.inl
  ./ace/Task_Ex_T.inl
  ./ace/Task_T.inl
  ./ace/Thread.inl
  ./ace/Thread_Adapter.inl
  ./ace/Thread_Control.inl
  ./ace/Thread_Manager.inl
  ./ace/Thread_Mutex.inl
  ./ace/Thread_Semaphore.inl
  ./ace/Time_Value.inl
  ./ace/Timeprobe.inl
  ./ace/Timer_Queue_Adapters.inl
  ./ace/Timer_Queue_T.inl
  ./ace/TLI.inl
  ./ace/TLI_Connector.inl
  ./ace/TLI_Stream.inl
  ./ace/Token.inl
  ./ace/Token_Collection.inl
  ./ace/Token_Manager.inl
  ./ace/Token_Request_Reply.inl
  ./ace/TP_Reactor.inl
  ./ace/TSS_T.inl
  ./ace/Typed_SV_Message.inl
  ./ace/Typed_SV_Message_Queue.inl
  ./ace/Unbounded_Queue.inl
  ./ace/Unbounded_Set.inl
  ./ace/Unbounded_Set_Ex.inl
  ./ace/UNIX_Addr.inl
  ./ace/UPIPE_Acceptor.inl
  ./ace/UPIPE_Connector.inl
  ./ace/UPIPE_Stream.inl
  ./ace/UTF16_Encoding_Converter.inl
  ./ace/UUID.inl
  ./ace/Vector_T.inl
  ./ace/WFMO_Reactor.inl
  ./ace/XTI_ATM_Mcast.inl
  ./ace/ace.rc
)

include_directories( 
  ${CMAKE_SOURCE_DIR}/dep/ACE_wrappers
)

add_definitions( 
  -DACE_BUILD_DLL
  -DWIN32
  -D_CRT_NONSTDC_NO_DEPRECATE
  -D_CRT_NONSTDC_NO_WARNINGS
  -D_CRT_SECURE_NO_DEPRECATE
  -D_CRT_SECURE_NO_WARNINGS
  -D_WINDOWS
)

add_library(${LIBRARY_NAME} SHARED
  ${LIBRARY_SRCS}
)

install(TARGETS ${LIBRARY_NAME}
  LIBRARY DESTINATION ${LIBS_DIR}
  RUNTIME DESTINATION ${LIBS_DIR}
)